fix spacing

--- a/src/css/ownedonsteam.css
+++ b/src/css/ownedonsteam.css
@@ -15,14 +15,6 @@
     border: 1px solid #FFFFFF;
 }
 
-.oss_ownership_margin_top {
-    margin-top: 5px;
-}
-
-.oss_ownership_margin_bottom {
-    margin-top: 5px;
-}
-
 .oos_loading {
     background-color: #040a0d;
 }
